Media Controls: Rename "stop casting" to "cast"

Rename "stop casting" to "cast" in line with the spec for the new media
controls. On the old controls, show cast instead of "stop casting"
because we show a settings dialog instead of actually stopping casting.

BUG=679520

Change-Id: Ie6857fd710d412f166cfa2ae49e1490918791c69
Reviewed-on: https://chromium-review.googlesource.com/846881
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: Jochen Eisinger <jochen@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527286}