third_party/WebKit/Source/modules/media_controls/elements/MediaControlCastButtonElement.cpp
@@ -79,8 +79,6 @@ bool MediaControlCastButtonElement::WillRespondToMouseClickEvents() {
 
 WebLocalizedString::Name MediaControlCastButtonElement::GetOverflowStringName()
     const {
-  if (IsPlayingRemotely())
-    return WebLocalizedString::kOverflowMenuStopCast;
   return WebLocalizedString::kOverflowMenuCast;
 }
 
