third_party/WebKit/public/platform/WebLocalizedString.h
@@ -104,7 +104,6 @@ struct WebLocalizedString {
     kOverflowMenuCast,
     kOverflowMenuEnterFullscreen,
     kOverflowMenuExitFullscreen,
-    kOverflowMenuStopCast,
     kOverflowMenuMute,
     kOverflowMenuUnmute,
     kOverflowMenuPlay,
